# rl-llm-reward

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/decisions/: 0001-reward-representation.md
examples/: colab_demo.ipynb  smoke_llm_three_prompts.py  smoke_train_forward.py
examples/cached_responses/: README.md
examples/specs/: README.md  ant_forward.json  ant_stand.json  backward_locomotion.json  forward_locomotion.json  hopper_forward.json  hopper_hop_in_place.json  stand_still.json
src/prompt_to_policy/: cli.py
src/prompt_to_policy/envs/: __init__.py  ant.py  halfcheetah.py  hopper.py  registry.py
src/prompt_to_policy/llm/: __init__.py  client.py  gemini_client.py  local_client.py  pricing.py
src/prompt_to_policy/llm/templates/: __init__.py  _base.py  ant.py  halfcheetah.py  hopper.py
src/prompt_to_policy/render/: __init__.py  rollout.py
src/prompt_to_policy/reward/: __init__.py  build.py  spec.py
src/prompt_to_policy/train/: __init__.py  config.py  harness.py  wrappers.py
tests/: test_ant_env.py  test_ant_features.py  test_cli.py  test_gemini_client.py  test_halfcheetah_env.py  test_halfcheetah_features.py  test_hopper_env.py  test_hopper_features.py  test_llm_client.py  test_llm_pricing.py  test_llm_template.py  test_local_client.py  test_package.py  test_reward_build.py  test_reward_smoke.py  test_reward_spec.py  test_train_harness.py  test_train_wrappers.py
