[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-to-policy"
version = "0.0.1"
description = "Educational demo: natural-language prompts to trained RL policies via LLM-emitted reward specs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Finding Theta" }]
dependencies = [
    "gymnasium[mujoco]>=1.0",
    "stable-baselines3>=2.3",
    "anthropic>=0.40",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pydantic>=2.7",
    "tyro>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_to_policy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
